# Famicom-haskell

./: .gitignore  Famicom-Haskell.cabal  README.md  stack.yaml
app/: Main.hs
src/: Emulator.hs
src/Emulator/: CPU.hs  Cartridge.hs  Mapper.hs  Mem.hs  Nes.hs  Opcode.hs  PPU.hs  PPUReg.hs  Rom.hs  Trace.hs  Util.hs
src/Emulator/Mapper/: Mapper2.hs
src/Emulator/Util/: Trace.hs  Util.hs
test/: Spec.hs  SpecHelper.hs
test/Nestest/: Parsing.hs  Spec.hs
